--- a/.github/workflows/update_db.yml
+++ b/.github/workflows/update_db.yml
@@ -11,6 +11,8 @@ jobs:
     
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       
       - uses: actions/setup-python@v5
         with:
@@ -25,10 +27,11 @@ jobs:
       - name: Update Database
         run: python scripts/updater.py
       
-      - name: Commit changes
+      - name: Commit and push changes
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          git pull --rebase origin main
           git add data/saudi_league_complete.db
           git diff --quiet && git diff --staged --quiet || git commit -m "🔄 Update $(date '+%Y-%m-%d')"
           git push
