--- a/.github/workflows/update_db.yml
+++ b/.github/workflows/update_db.yml
@@ -13,7 +13,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          fetch-depth: 0
       
       - uses: actions/setup-python@v5
         with:
@@ -28,26 +27,19 @@ jobs:
       - name: Update Database
         run: python scripts/updater.py
       
-      - name: Check for changes
-        id: check_changes
-        run: |
-          git diff --quiet data/saudi_league_complete.db || echo "changed=true" >> $GITHUB_OUTPUT
-      
       - name: Commit and push changes
-        if: steps.check_changes.outputs.changed == 'true'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          
+          # Check if there are changes
+          if git diff --quiet data/saudi_league_complete.db; then
+            echo "No changes to commit"
+            exit 0
+          fi
+          
           git add data/saudi_league_complete.db
           git commit -m "🔄 Update database $(date '+%Y-%m-%d %H:%M')"
           
-          # Pull latest changes and rebase
-          git fetch origin main
-          git rebase origin/main || {
-            # If rebase fails, use force push
-            git rebase --abort
-            git push --force-with-lease origin main
-            exit 0
-          }
-          
-          git push origin main
+          # Force push (safe because only this workflow modifies the database)
+          git push --force-with-lease origin HEAD:main
